--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,11 @@ body {
 .nav-link a {
   color: #FFFFFF80;
 }
+#root > main > nav > form > div > div > div{
+  color: #000;
+}
+
+#root > main > nav > form > div > div > div.css-g1d714-ValueContainer{
+  width: 150px;
+  color: black;
+}
